Fixed z-index of toolbar for gridster
Conflicts:
	crits/core/static/css/core.css

--- a/crits/core/static/css/core.css
+++ b/crits/core/static/css/core.css
@@ -390,3 +390,6 @@ span.right.link a:link{
 ul.gridster {
     padding-left: 0px !important;
 }
+.top.responsive {
+	z-index:11;
+}
